--- a/react-app/package.json
+++ b/react-app/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.6.0",
     "axios": "^0.19.0",
     "react": "^16.11.0",
+    "react-canvas-draw": "^1.0.2",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
