--- a/nest-api/package.json
+++ b/nest-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "collab-api",
+  "name": "nest-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -22,17 +22,10 @@
   "dependencies": {
     "@nestjs/common": "^6.7.2",
     "@nestjs/core": "^6.7.2",
-    "@nestjs/graphql": "^6.5.3",
-    "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-express": "^6.7.2",
-    "apollo-server-express": "^2.9.7",
-    "graphql": "^14.5.8",
-    "graphql-tools": "^4.0.6",
-    "mongoose": "^5.7.9",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3",
-    "type-graphql": "^0.17.5"
+    "rxjs": "^6.5.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
@@ -40,7 +33,6 @@
     "@nestjs/testing": "^6.7.1",
     "@types/express": "^4.17.1",
     "@types/jest": "^24.0.18",
-    "@types/mongoose": "^5.5.30",
     "@types/node": "^12.7.5",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
