--- a/react-app/package.json
+++ b/react-app/package.json
@@ -9,7 +9,8 @@
     "react-canvas-draw": "^1.0.2",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-websocket": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
