--- a/react-app/package.json
+++ b/react-app/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.6.0",
+    "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "react": "^16.11.0",
     "react-canvas-draw": "^1.0.2",
+    "react-color": "^2.17.3",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
