--- a/nest-api/package.json
+++ b/nest-api/package.json
@@ -20,11 +20,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nest-middlewares/cookie-parser": "^6.0.0",
+    "@nest-middlewares/express-session": "^6.0.1",
     "@nestjs-addons/in-memory-db": "^1.8.3",
     "@nestjs/common": "^6.7.2",
     "@nestjs/core": "^6.7.2",
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-express": "^6.7.2",
+    "@nestjs/platform-socket.io": "^6.9.0",
+    "@nestjs/websockets": "^6.9.0",
     "mongoose": "^5.7.9",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
@@ -35,6 +39,7 @@
     "@nestjs/schematics": "^6.7.0",
     "@nestjs/testing": "^6.7.1",
     "@types/express": "^4.17.1",
+    "@types/express-session": "^1.15.15",
     "@types/jest": "^24.0.18",
     "@types/mongoose": "^5.5.30",
     "@types/node": "^12.7.5",
