--- a/nest-api/package.json
+++ b/nest-api/package.json
@@ -28,7 +28,9 @@
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/platform-socket.io": "^6.9.0",
+    "@nestjs/serve-static": "^1.0.1",
     "@nestjs/websockets": "^6.9.0",
+    "@types/socket.io": "^2.1.4",
     "mongoose": "^5.7.9",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
